--- a/app/views/layouts/groups.html.erb
+++ b/app/views/layouts/groups.html.erb
@@ -38,6 +38,14 @@
             label: t(:"groups.sidebar.activity"),
             selected: @current_page == t(:"groups.sidebar.activity"),
           ) %>
+          <% if allowed_to?(:view_workflow_executions?, @group) && @pipelines_enabled %>
+            <%= render section.with_item(
+              url: group_workflow_executions_path(@group),
+              icon: "command_line",
+              label: t(:"groups.sidebar.workflow_executions"),
+              selected: @current_page == t(:"groups.sidebar.workflow_executions"),
+            ) %>
+          <% end %>
           <% if allowed_to?(:update?, @group) %>
             <%= render section.with_multi_level_menu(
               title: t(:"groups.sidebar.settings"),
