feat: Add attachment preview functionality for workflow executions
- Implement new AttachmentsController for handling attachment previews
- Create dedicated view for attachment preview with file details and download option
- Add route for attachment preview in workflow executions
- Support preview for image and text file types
- Update attachment partial to link to new preview page

--- a/app/views/workflow_executions/_attachment.html.erb
+++ b/app/views/workflow_executions/_attachment.html.erb
@@ -80,7 +80,9 @@
   </td>
 
   <td class="px-6 py-4 space-x-2 flex justify-end">
-    <button class="text-blue-600 dark:text-blue-100 font-semibold hover:underline"><%= t(".preview") %></button>
+    <%= link_to workflow_executions_attachments_path(attachment: attachment.id), class: "text-blue-600 dark:text-blue-100 font-semibold hover:underline" do %>
+      <%= t(".preview") %>
+    <% end %>
     <% if attachment.associated_attachment %>
       <%= link_to attachment.associated_attachment.file.filename,
       rails_blob_path(attachment.associated_attachment),
