--- a/app/views/workflow_executions/attachments/index.html.erb
+++ b/app/views/workflow_executions/attachments/index.html.erb
@@ -72,7 +72,17 @@
             p-4 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900 dark:text-slate-300
           "
         >
-          <%= @attachment.file.download %>
+          <% @attachment.file.download.lines.each_with_index do |line, index| %>
+            <div class="flex">
+              <span
+                class="
+                  w-12 pr-2 mr-2 text-right border-r select-none text-slate-400
+                  dark:text-slate-600 border-slate-200 dark:border-slate-700
+                "
+              ><%= index + 1 %></span>
+              <span class="pl-4"><%= line.strip %></span>
+            </div>
+          <% end %>
         </pre>
       <% else %>
         <div class="py-12 text-center text-slate-500 dark:text-slate-400">
