start progress bar on copy samples

--- a/app/views/projects/samples/clones/_dialog.html.erb
+++ b/app/views/projects/samples/clones/_dialog.html.erb
@@ -85,7 +85,9 @@
                             class: "button button--size-default button--state-primary",
                             disabled: true,
                             data: {
-                              action: "click->form--hidden-inputs#clearSelection",
+                              action:
+                                "click->form--hidden-inputs#clearSelection
+                                              click->viral--dialog#hideClose",
                               "viral--select2-target": "submitButton",
                             } %>
               </div>
