--- a/app/views/projects/samples/clones/create.turbo_stream.erb
+++ b/app/views/projects/samples/clones/create.turbo_stream.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream.append "clone_samples_dialog_content" do %>
-  <%= render SpinnerComponent.new(
-    message: t("projects.samples.clones.dialog.spinner_message"),
-  ) %>
+<%= turbo_stream.update "clone_samples_dialog_content" do %>
+  <%= render partial: "shared/progress_bar", locals: { percentage: "0" } %>
 <% end %>
