refactor progress bar to use stimulus, add progress bar to clone, transfer, and metadata import

--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -1,12 +1,26 @@
-<div class="flex justify-between mb-1">
-  <span class="text-base font-medium text-slate-900 dark:text-white"><%= t(".in_progress") %></span>
-  <span class="text-sm font-medium text-slate-900 dark:text-white"><%= percentage %>%</span>
-</div>
-<div class="w-full bg-slate-200 rounded-full h-2.5 dark:bg-slate-700">
-  <div
-    class="bg-primary-600 h-2.5 rounded-full"
-    style="width: <%= percentage %>%"
-  ></div>
+<div
+  data-controller="progress-bar"
+  data-progress-bar-total-count-value="<%= total_count %>"
+  id="progress-bar"
+>
+  <div class="flex justify-between mb-1">
+    <span
+      id="progress-message"
+      class="text-base font-medium text-slate-900 dark:text-white"
+    ><%= t(".in_progress") %></span>
+    <span
+      data-progress-bar-target="progressText"
+      class="text-sm font-medium text-slate-900 dark:text-white"
+    >0%</span>
+  </div>
+  <div class="w-full bg-slate-200 rounded-full h-2.5 dark:bg-slate-700">
+    <div
+      class="bg-primary-600 h-2.5 rounded-full"
+      style="width: 0%"
+      role="progressbar"
+      data-progress-bar-target="progress"
+    ></div>
+  </div>
 </div>
 
 <turbo-stream action="refresh"></turbo-stream>
