--- a/app/views/projects/samples/clones/create.turbo_stream.erb
+++ b/app/views/projects/samples/clones/create.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.update "clone_samples_dialog_content" do %>
-  <%= render partial: "shared/progress_bar", locals: { percentage: "0" } %>
+  <%= render partial: "shared/progress_bar", locals: { total_count: @total_count } %>
 <% end %>
