--- a/app/views/projects/samples/transfers/create.turbo_stream.erb
+++ b/app/views/projects/samples/transfers/create.turbo_stream.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream.append "transfer_samples_dialog_content" do %>
-  <%= render SpinnerComponent.new(
-    message: t("projects.samples.transfers.dialog.spinner_message"),
-  ) %>
+<%= turbo_stream.update "transfer_samples_dialog_content" do %>
+  <%= render partial: "shared/progress_bar", locals: { total_count: @total_count } %>
 <% end %>
