refactor variable names, refactor import metadata progress logic

--- a/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
+++ b/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
@@ -1,5 +1,6 @@
-<%= turbo_stream.append "import_metadata_dialog_content" do %>
-  <%= render SpinnerComponent.new(
-    message: t("shared.samples.metadata.file_imports.dialog.spinner_message"),
-  ) %>
+<%= turbo_stream.update "import_metadata_dialog_content" do %>
+  <%= render partial: "shared/progress_bar",
+  locals: {
+    items_to_complete: @samples_count,
+  } %>
 <% end %>
