--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -1,6 +1,6 @@
 <div
   data-controller="progress-bar"
-  data-progress-bar-total-count-value="<%= total_count %>"
+  data-progress-bar-items-to-complete-value="<%= items_to_complete %>"
   id="progress-bar"
 >
   <div class="flex justify-between mb-1">
