--- a/app/views/projects/samples/metadata/file_imports/create.turbo_stream.erb
+++ b/app/views/projects/samples/metadata/file_imports/create.turbo_stream.erb
@@ -1,3 +1,6 @@
 <%= turbo_stream.update "import_metadata_dialog_content" do %>
-  <%= render partial: "shared/progress_bar", locals: { total_count: 100 } %>
+  <%= render partial: "shared/progress_bar",
+  locals: {
+    items_to_complete: @samples_count,
+  } %>
 <% end %>
