--- a/app/views/projects/samples/transfers/create.turbo_stream.erb
+++ b/app/views/projects/samples/transfers/create.turbo_stream.erb
@@ -1,3 +1,6 @@
 <%= turbo_stream.update "transfer_samples_dialog_content" do %>
-  <%= render partial: "shared/progress_bar", locals: { total_count: @total_count } %>
+  <%= render partial: "shared/progress_bar",
+  locals: {
+    items_to_complete: @samples_count,
+  } %>
 <% end %>
