--- a/app/views/projects/samples/metadata/_form.html.erb
+++ b/app/views/projects/samples/metadata/_form.html.erb
@@ -78,48 +78,13 @@
       <%= form.button t(".create_field_button"),
                   type: "button",
                   class:
-                    "text-slate-900
-                        bg-white
-                        border
-                        border-slate-200
-                        focus:outline-none
-                        hover:bg-slate-100
-                        hover:text-slate-950
-                        focus:ring-4 font-medium
-                        rounded-lg
-                        text-sm
-                        px-5
-                        py-2.5
-                        me-2
-                        mb-2
-                        dark:bg-slate-800
-                        dark:text-slate-400
-                        dark:border-slate-600
-                        dark:hover:text-white
-                        dark:hover:bg-slate-700
-                        dark:focus:ring-slate-700",
+                    "text-slate-900 bg-white border border-slate-200 focus:outline-none hover:bg-slate-100 hover:text-slate-950 focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-slate-800 dark:text-slate-400 dark:border-slate-600 dark:hover:text-white dark:hover:bg-slate-700 dark:focus:ring-slate-700",
                   "data-action": "projects--samples--metadata--create#addField" %>
     </div>
     <div>
       <%= form.submit t(".submit_button"),
                   class:
-                    "focus:outline-none
-                          text-white
-                          border-primary-800
-                          bg-primary-700
-                          hover:bg-primary-800
-                          focus:ring-4
-                          focus:ring-primary-300
-                          font-medium rounded-lg
-                          text-sm
-                          px-5
-                          py-2.5
-                          me-2
-                          mb-2
-                          dark:border-primary-900
-                          dark:bg-primary-800
-                          dark:hover:bg-primary-700
-                          dark:focus:ring-primary-700",
+                    "focus:outline-none text-white border-primary-800 bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:border-primary-900 dark:bg-primary-800 dark:hover:bg-primary-700 dark:focus:ring-primary-700",
                   "data-action": "projects--samples--metadata--create#buildMetadata" %>
     </div>
   </div>
