--- a/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
+++ b/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
@@ -1,6 +1,3 @@
 <%= turbo_stream.update "import_metadata_dialog_content" do %>
-  <%= render partial: "shared/progress_bar",
-  locals: {
-    items_to_complete: @samples_count,
-  } %>
+  <%= render Viral::ProgressBarComponent.new(items_to_complete: @samples_count) %>
 <% end %>
