--- a/app/views/workflow_executions/attachments/index.html.erb
+++ b/app/views/workflow_executions/attachments/index.html.erb
@@ -88,13 +88,14 @@
         <div class="hidden" data-clipboard-target="source">
           <%= JSON.parse(@attachment.file.download) %>
         </div>
-        <pre
+        <div
           class="
-            p-4 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900 dark:text-slate-300
+            p-0 m-0 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900
+            dark:text-slate-300
           "
         >
           <% JSON.pretty_generate(JSON.parse(@attachment.file.download)).lines.each_with_index do |line, index| %>
-            <div class="flex">
+            <pre class="flex dark:text-slate-400">
               <span
                 class="
                   w-12 pr-2 text-right border-r select-none min-w-12 text-slate-400
@@ -102,9 +103,9 @@
                 "
               ><%= index + 1 %></span>
               <span class="pl-4 text-wrap"><%= line %></span>
-            </div>
+            </pre>
           <% end %>
-        </pre>
+        </div>
       <% else %>
         <div class="py-12 text-center text-slate-500 dark:text-slate-400">
           <p><%= t(".not_available.title") %></p>
