--- a/app/views/workflow_executions/attachments/index.html.erb
+++ b/app/views/workflow_executions/attachments/index.html.erb
@@ -85,27 +85,7 @@
           <% end %>
         </pre>
       <% elsif @attachment.file.content_type.start_with?('application/json') %>
-        <div class="hidden" data-clipboard-target="source">
-          <%= JSON.parse(@attachment.file.download) %>
-        </div>
-        <div
-          class="
-            p-0 m-0 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900
-            dark:text-slate-300
-          "
-        >
-          <% JSON.pretty_generate(JSON.parse(@attachment.file.download)).lines.each_with_index do |line, index| %>
-            <pre class="flex dark:text-slate-400">
-              <span
-                class="
-                  w-12 pr-2 text-right border-r select-none min-w-12 text-slate-400
-                  dark:text-slate-600 border-slate-200 dark:border-slate-700
-                "
-              ><%= index + 1 %></span>
-              <span class="pl-4 text-wrap"><%= line %></span>
-            </pre>
-          <% end %>
-        </div>
+        <%= render "json_preview", file: @attachment.file %>
       <% else %>
         <div class="py-12 text-center text-slate-500 dark:text-slate-400">
           <p><%= t(".not_available.title") %></p>
