--- a/app/views/workflow_executions/attachments/_json_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_json_preview.html.erb
@@ -1,3 +1,6 @@
+<div class="hidden" data-clipboard-target="source">
+  <%= file.download %>
+</div>
 <div
   class="
     p-0 pt-6 pb-6 m-0 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900
