--- a/app/views/workflow_executions/attachments/_text_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_text_preview.html.erb
@@ -1,3 +1,6 @@
+<div class="hidden" data-clipboard-target="source">
+  <%= file.download %>
+</div>
 <pre
   class="
     p-4 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900 dark:text-slate-300
