--- a/app/views/workflow_executions/attachments/_tsv_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_tsv_preview.html.erb
@@ -1,3 +1,6 @@
+<div class="hidden" data-clipboard-target="source">
+  <%= file.download %>
+</div>
 <div class="overflow-x-auto">
   <table class="min-w-full divide-y divide-slate-200 dark:divide-slate-700">
     <thead class="bg-slate-50 dark:bg-slate-700">
